--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "antd": "^6.2.1",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
